src/web/html/style.css
/* ... */
input.sh {
    max-width: 150px !important;
    margin-right: 10px;
}

input.btnDel {
    background-color: #c00 !important;
}

input.btn {
    background-color: var(--primary);
    color: #fff;
    border: 0;
    padding: 7px 20px 7px 20px;
    margin-bottom: 10px;
    text-transform: uppercase;
    cursor: pointer;
}

input.btn:disabled {
    background-color: var(--primary-disabled);
    color: #888;
    cursor: not-allowed;
}

input.btn:not(:disabled):hover {
    background-color: #044e86;
}

input.cb {
    margin-bottom: 15px;
    margin-top: 10px;
}

label {
    width: 20%;
    display: inline-block;
    font-size: 12pt;
    padding-right: 10px;
    margin: 10px 0 0 15px;
    vertical-align: top;
}

pre {
    white-space: pre-wrap;
}

.left {
    float: left;
}

.right {
    float: right;
}

.subgrp {
    float: left;
    width: 220px;
}

div.ModPwr, div.ModName, div.YieldCor {
  width:70%;
  display: inline-block;
}

div.hr {
    height: 1px;
    border-top: 1px solid #ccc;
    margin: 10px 0 10px;
}

#note {
    margin: 10px 10px 10px 10px;
    padding-top: 10px;
    width: 100%;
}

#login {
    width: 450px;
    height: 200px;
    border: 1px solid #ccc;
    background-color: var(--input-bg);
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -160px;
    margin-left: -225px;
}

@media(max-width: 500px) {
    div.ch .unit, div.ch-iv .unit {
        font-size: 18px;
    }

    div.ch {
        width: 170px;
        min-height: 100px
    }

    .subgrp {
        width: 180px;
    }

    #login {
        margin-left: -150px;
        width: 300px;
    }
}

#serial {
    width: 100%;
}

#content .serial {
    max-width: 1000px;
}

.dot {
    height: 15px;
    width: 15px;
    background-color: #f00;
    border-radius: 50%;
    display: inline-block;
    margin-top: 15px;
}


.head {
    background-color: var(--primary);
    color: #fff;
}


.tooltip:hover {
    position: relative;
}
.tooltip:hover:after {
    content: attr(data);
    background: var(--nav-active);
    padding: 5px;
    border-radius: 3px;
    display: inline-block;
    position: absolute;
    transform: translate(-50%,-100%);
    margin:0 auto;
    color: var(--fg2);
    min-width: 100px;
    top: -5px;
    left: 50%;
    text-align:center;
    font-size: 1rem;
}

#modal {
    max-width: 700px;
    margin: 1.75rem auto;
}

.modal, #modal-wrapper {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1072;
    display: block;
}

.modal {
    height: calc(100% - 3.5rem);
}

#modal-wrapper {
    background-color: #000;
    opacity: 0.5;
    bottom: 0;
}

.modal-content {
    border-radius: .3rem;
    position: relative;
    display: flex;
    width: 100%;
    background-color: var(--modal-bg);
    background-clip: padding-box;
    border: 1px solid var(--fg);
    flex-direction: column;
    max-height: 100%;
    overflow: hidden;
}

.modal-header {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    padding: 1rem;
    border-bottom: 1px solid var(--table-border);
}

.modal-header .close {
    padding: 0.7rem;
    margin: -1rem -1rem -1rem auto;
}

.modal-body {
    padding: 1rem;
    overflow-y: auto;
}

.close {
    font-size: 2rem;
    opacity: 0.5;
    font-family: inherit;
    cursor: pointer;
    padding: 0;
}

button.close {
    background-color: transparent;
    border: 0;
}

h5 {
    font-size: 1.25rem;
    margin-top: 0;
    margin-bottom: 0.5rem;
    font-weight: 500;
}

.pointer {
    cursor: pointer;
}

.badge-success {
  color: #fff;
  background-color: #28a745;
}

.badge-warning {
  color: #212529;
  background-color: #ffc107;
}

.badge-error {
  color: #fff;
  background-color: #dc3545;
}

.badge {
    display: inline-block;
    padding: .25em .4em;
    font-size: 85%;
    font-weight: 700;
    line-height: 1;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: .25rem;
}

ul {
    margin-top: 0;
}

.nav {
    display: flex;
    flex-wrap: wrap;
    padding-left: 0;
    list-style: none;
}

.nav-tabs {
    border-bottom: 1px solid var(--fg);
}

.nav-tabs .nav-link {
    margin-bottom: -1px;
    border: 1px solid transparent;
    border-top-left-radius: .25rem;
    border-top-right-radius: .25rem;
}

.nav-link {
    display: block;
    padding: .5rem 1rem;
    text-decoration: none;
    color: var(--fg);
}

.nav-tabs .nav-link.active {
    border-color: var(--primary) var(--fg) var(--bg);
    border-top-width: 4px;
}

.nav-link:hover, .nav-link:visited {
    background-color: var(--input-bg);
    color: var(--fg);
}

.d-flex {
    display: flex !important;
}

.jc {
    justify-content: center !important;
}

.aic {
    align-items: center !important;
}

.container {
    height: 100%;
    overflow: auto;
}

